# tauri-plugin-trafficlights-positioner

./: Cargo.toml  README.md
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: test.yml
example/public/: index.html
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/src/: main.rs
src/: lib.rs  positioner.rs
