[package]
name = "tauri-plugin-trafficlights-positioner"
version = "1.0.0"
authors = ["ItsEeleeya"]
description = "Helps insetting the window traffic lights on macOS."
edition = "2021"
rust-version = "1.60"
exclude = ["/example"]

[dependencies]
tauri = { version = "1.7.0" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
rand = "0.8.5"
