[package]
name = "tauri-plugin-trafficlights-positioner"
version = "1.0.0"
authors = ["ItsEeleeya"]
description = "A Tauri v1 plugin to help setting the position of the window traffic lights on macOS."
edition = "2021"
rust-version = "1.60"
exclude = ["/example", ".github"]
license = "MIT"
repository = "https://github.com/itseeleeya/tauri-plugin-trafficlights-positioner/"
keywords = ["tauri", "tauri-plugin", "tauri-plugin-macos"]

[dependencies]
tauri = { version = "1.7.0" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
rand = "0.8.5"
