[package]
name = "example-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["You"]
repository = ""
edition = "2021"
rust-version = "1.60"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = ["window-start-dragging"] }

[target.'cfg(target_os = "macos")'.dependencies]
# tauri-plugin-trafficlights-positioner = { git = "https://github.com/ItsEeleeya/tauri-plugin-trafficlights-positioner/" }
tauri-plugin-trafficlights-positioner = { path = "../../" }

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
